--- a/cart.html
+++ b/cart.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
     <link rel="shortcut icon" href="https://www.healthkart.com/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="cart.css">
+    <link rel="stylesheet" href="style\cart.css">
 </head>
 
 <body>
@@ -33,10 +33,9 @@
     <div class="allItems">
         <div class="leftSide">
             <div id="cartItem"></div>
-            <div id="cart_data">
-
-            </div>
+            <div id="cart_data"> </div>
         </div>
+        
         <div class="rightSide">
             <div id="pincode"></div>
             <div id="coupon"></div>
@@ -49,7 +48,7 @@
     </div>
 </body>
 
-<script src="cart.js"></script>
+<script src="scripts\cart.js"></script>
 
 
 </html>
