--- a/checkout.html
+++ b/checkout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="checkout.css">
+    <link rel="stylesheet" href="style\checkout.css">
 
     <title>Checkout</title>
     <link rel="shortcut icon" href="https://www.healthkart.com/favicon.ico" type="image/x-icon">
