--- a/flashsale.html
+++ b/flashsale.html
@@ -7,7 +7,7 @@
     <title>Protein Powder Online in India at Best Price - HealthKart</title>
     <link rel="icon" href="https://www.healthkart.com/favicon.ico" type="image/x-icon"> 
 
-    <link rel="stylesheet" href="flashsale.css" type="text/css">
+    <link rel="stylesheet" href="style\flashsale.css" type="text/css">
     <!-- <script src="proteins.js"></script> -->
 </head>
 <body onload="showProteins()">
@@ -144,6 +144,6 @@
 
     
 </body>
-<script src="proteins.js"></script>
-<script src="cartcount.js"></script>
+<script src="scripts\proteins.js"></script>
+<script src="scripts\cartcount.js"></script>
 </html>
