--- a/sports-nutrition.html
+++ b/sports-nutrition.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Protein Powder Online in India at Best Price - HealthKart</title>
     <link rel="icon" href="https://www.healthkart.com/favicon.ico" type="image/x-icon"> 
-    <link rel="stylesheet" href="sports-nutrition.css" type="text/css">
+    <link rel="stylesheet" href="style\sports-nutrition.css" type="text/css">
     <!-- <script src="proteins.js"></script> -->
 </head>
 <body onload="showProteins()">
@@ -171,6 +171,6 @@
 
     
 </body>
-<script src="proteins.js"></script>
-<script src="cartcount.js"></script>
+<script src="scripts\proteins.js"></script>
+<script src="scripts\cartcount.js"></script>
 </html>
