--- a/wishlist.html
+++ b/wishlist.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wishlist</title>
     <link rel="shortcut icon" href="https://www.healthkart.com/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="wishlist.css">
+    <link rel="stylesheet" href="style\wishlist.css">
 </head>
 <body>
     <!-- NAVBAR START -->
@@ -106,7 +106,7 @@
 
     
 </body>
-<script src="wishlist.js"></script>
+<script src="scripts\wishlist.js"></script>
 
 </html>
-<script src="cartcount.js"></script>
+<script src="scripts\cartcount.js"></script>
