--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HealthKart - India</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style\index.css">
     <!-- icon CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="https://www.healthkart.com/favicon.ico" type="image/x-icon">
@@ -468,5 +468,5 @@
 </body>
 
 </html>
-<script src="index.js"></script>
-<script src="cartcount.js"></script>
+<script src="scripts\index.js"></script>
+<script src="scripts\cartcount.js"></script>
