--- a/login.html
+++ b/login.html
@@ -235,7 +235,7 @@
             </div>
         </div>
     </div>
-    <script src="login.js"></script>
+    <script src="scripts\login.js"></script>
 </body>
 
 </html>
